--- a/css/style.css
+++ b/css/style.css
@@ -192,4 +192,24 @@ template { display: none; }
 /*@import "pages/registration";*/
 * { box-sizing: border-box; }
 
-body { margin: 0 auto; background-color: #000; }
+a { text-decoration: none; color: #000; }
+
+body { margin: 0 auto; background-color: #fff; font-family: 'Lato', sans-serif; }
+
+h1 { font-family: 'Josefin Slab', serif; }
+
+div { padding: 20px; border: 5px solid; }
+
+.left { border-color: #e74c3c; float: left; width: 300px; height: 100vh; background-color: #191919; color: #efe8e8; }
+
+.right { border-color: #2ecc71; margin-left: 300px; background-color: #000; }
+
+nav > ul > li { display: inline-block; padding: 7px; }
+
+nav { margin: 0 auto; text-align: right; font-size: 26px; }
+
+nav > ul { padding: 0; margin: 0; }
+
+.nav-side a { color: #efe8e8; }
+
+i { padding: 10px; }
