--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,6 +18,8 @@
     box-sizing: border-box;    
 }
 
+
+
 a {
     text-decoration: none;
     color: #000;
@@ -25,7 +27,7 @@ a {
 
 body {
     margin: 0 auto;
-    background-color: #ccc;
+    background-color: #fff;
     font-family: 'Lato', sans-serif;
 }
 h1 {
@@ -47,7 +49,7 @@ div {
 .right {
     border-color: #2ecc71;
     margin-left: 300px;
-    background-color: #fff;
+    background-color: #000;
 }
 
 nav > ul > li {
