--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,10 +6,12 @@ $brand-main-color: #181064;
 $paragraph-font-size: 16px;
 
 /* Fonts */
-$brand-font: "Open Sans", Helvetica, Arial, Montserrat;
-$paragraph-font: "Open Sans", Helvetica, Arial, Rye;
+$brand-font: "Open Sans", Helvetica, Arial;
+$paragraph-font: 'Lato', Arial;
+$h1-font: 'Josefin Slab';
 
 $nav-background: #313234;
 $kodfont-color: #00c7e8;
 $kodfont-second: #fff;
 $kodfont-third: #000;
+$kodfont-four: #ccc;
