--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,28 @@
 /* Colors */
 /* Font sizes */
 /* Fonts */
+@media (max-width: 668px) {
+  .navbar {
+    height: auto;
+  }
+  .navbar ul {
+    padding: 0;
+  }
+  .navbar ul li {
+    display: block;
+    text-align: center;
+    padding: 0;
+  }
+  .navbar a {
+    text-align: center;
+    text-decoration: none;
+    font-size: 25px;
+    color: #000;
+    float: none;
+    width: 100%;
+  }
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -524,83 +546,90 @@ template {
   box-sizing: border-box;
 }
 
-a {
-  text-decoration: none;
-  color: #000;
-}
-
-i {
-  padding: 7px;
-}
-
 body {
   margin: 0 auto;
   background-color: #ccc;
   font-family: "Lato", Arial;
 }
 
-h1 {
-  font-family: "Josefin Slab";
-}
-
-div {
-  padding: 20px;
-  border: 5px solid;
-}
-
-.left {
-  border-color: #e74c3c;
-  float: left;
-  width: 300px;
-  height: 100vh;
-  background-color: #313234;
-  color: #efe8e8;
-}
-
-.right {
-  border-color: #2ecc71;
-  margin-left: 300px;
+.navbar {
   background-color: #fff;
+  height: 55px;
+  line-height: 55px;
 }
 
-nav {
-  margin: 0 auto;
-  text-align: right;
-  font-size: 26px;
-}
-
-nav > ul {
-  padding: 0;
+.navbar ul {
   margin: 0;
-}
-
-nav > ul > li {
-  display: inline-block;
-  padding: 7px;
-}
-
-.navside_bar {
-  margin-left: 0;
-  padding: 0;
-  text-align: left;
-  color: #fff;
-}
-
-.navside_bar ul {
   list-style-type: none;
-  font-size: 18px;
+  text-align: right;
 }
 
-.navside_bar li {
-  padding: 15px;
+.navbar li {
+  display: inline-block;
+  padding: 0 18px;
 }
 
-.navside_bar > ul > li > a {
+.navbar a {
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  color: #000;
+  float: left;
+  display: block;
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: #313234;
+}
+
+.side-nav h1 {
+  color: #fff;
+  font-family: "Josefin Slab";
+  text-align: center;
+}
+
+.side-nav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #313234;
+  opacity: 0.9;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+}
+
+.side-nav a {
+  padding: 10px 10px 10px 30px;
+  text-decoration: none;
+  font-size: 22px;
   color: #ccc;
+  display: block;
+  transition: 0.3s;
 }
 
-.span_1 {
-  margin-left: 20%;
+.side-nav a:hover {
+  color: #fff;
+  background-color: #000;
+}
+
+.side-nav .btn-close {
+  position: absolute;
+  top: 0;
+  right: 22px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.main {
+  transition: margin-left 0.5s;
+  padding: 20px;
+  overflow: hidden;
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
