--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,30 +23,42 @@ body {
     font-family: $paragraph-font;
 }
 
-.navbar{
+.navbar {
     background-color: $kodfont-second;
-    overflow: hidden;
-    height: 63px;
-}
-
-.navbar a{
-    float: right;
-    display: block;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+    height: 55px;
+    line-height: 55px;
 }
 
 .navbar ul {
-    padding: 8px 0 0 0;
+    margin: 0;
     list-style-type: none;
+    text-align: right;
+}
+
+.navbar li {
+    display: inline-block;
+    padding: 0 18px;
+}
+
+.navbar a {
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    color: $kodfont-third;
+    float: left;
+    display: block;
 }
 
 .navbar a:hover {
     background-color: $kodfont-five;
     color: $nav-background;
 }
+
+.side-nav h1 {
+    color: $kodfont-second;
+    font-family: $h1-font;
+    text-align: center;
+  }
 
 .side-nav {
     height: 100%;
@@ -62,7 +74,7 @@ body {
     transition: 0.5s;
 }
 
-.side-nav a{
+.side-nav a {
     padding: 10px 10px 10px 30px;
     text-decoration: none;
     font-size: 22px;
@@ -77,7 +89,7 @@ body {
 }
 
 .side-nav .btn-close {
-    position: sbdolute;
+    position: absolute;
     top: 0;
     right: 22px;
     font-size: 36px;
@@ -90,5 +102,4 @@ padding: 20px;
 overflow: hidden;
 width: 100%;
 }
-
 
