--- a/sass/components/_component1.scss
+++ b/sass/components/_component1.scss
@@ -1,14 +1,27 @@
 /*Calendar input style*/
 input:required {
-    border-color: rgba(255, 99 ,71, 0.6);
-    outline-color: rgb(63, 122, 51);     
+   // border-color: rgba(255, 99 ,71, 0.6);
+    //outline-color: rgb(63, 122, 51);     
    }
 
-    .calendar {
+form {
+    display: flex;
+    justify-content: center;
+    }
+
+input {
+    border: 0;
+}
+.input-calendar{
+    border: 1px solid $kodfont-four;
+   
+}
+.calendar {
     text-align: center;
    }
    
-   .date-calendar {
-   width: 180px;
-   height: 30px;
+.date-calendar {
+   width: 150px;
+   border-left: 0.5px solid $kodfont-four;
+   padding: 2px 5px;
    }
