--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,9 +6,9 @@ $brand-main-color: #181064;
 $paragraph-font-size: 16px;
 
 /* Fonts */
-$brand-font: "Open Sans", Helvetica, Arial;
-$paragraph-font: 'Lato', Arial;
-$h1-font: 'Josefin Slab';
+$brand-font:'Open Sans', sans-serif;
+$paragraph-font: Arial;
+$h1-font: 'Damion', cursive;
 
 $nav-background: #313234;
 $kodfont-color: #00c7e8;
@@ -17,3 +17,13 @@ $kodfont-third: #000;
 $kodfont-four: #ccc;
 $kodfont-five: #ddd;
 $kodfont-six:  #f76c35;
+$box-shadow: rgba(135, 132, 128, 0.3);
+$title-section: #6f7070;
+$span-blue :#0442f9;
+$span-orange: #fc9105;
+$span-green: #30ad14;
+$h1-color: #565550;
+$h2h3-color: #757471;
+$h4-color: #9e975a;
+$table-color: #878080;
+$shadow-color: #c4a57d
