--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -2,12 +2,12 @@
 [class*="btn-"]{
     width: 80px;
     height: 40px;
-    border-radius: 10%;
+    @include border-radius(10%);
     border: none;
-    background-color: #fc9105;
-    color: #fff;
+    background-color: $span-orange;
+    color: $kodfont-second;
     cursor: pointer;
-    text-shadow: 0.7px 0.7px #6f7070;
+    text-shadow: 0.7px 0.7px $title-section;
     padding: 10px;
     margin-left: 10px;
     }
@@ -25,19 +25,19 @@
     }
     
     .btn-gray {
-    background-color: #726e69;
-    text-shadow: 0.7px 0.7px #c4a57d;
+    background-color: $title-section;
+    text-shadow: 0.7px 0.7px $shadow-color;
     }
     
     [class*="undo-"] {
-    text-shadow: 0.7px 0.7px #c4a57d;
+    text-shadow: 0.7px 0.7px $shadow-color;
     width: 50px;
     }
     
     .undo-1 {
-    width: 35px
+    width: 35px;
     }
     
     .undo-2 {
-    width:45px 
+    width: 45px; 
     }
