--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,100 +6,9 @@
 @import "components/component1";
 @import "components/component2";
 @import "components/component3";
+@import "components/component4";
 
-/* Sections */
-/*@import "section/registration_form";
+/*@import "sections/generalsection"*/;
 
 /* Pages / Views */
 /*@import "pages/registration";*/
-
-* {
-    box-sizing: border-box;    
-}
-
-body {
-    margin: 0 auto;
-    background-color: $kodfont-four;
-    font-family: $paragraph-font;
-}
-
-.navbar {
-    background-color: $kodfont-second;
-    height: 55px;
-    line-height: 55px;
-}
-
-.navbar ul {
-    margin: 0;
-    list-style-type: none;
-    text-align: right;
-}
-
-.navbar li {
-    display: inline-block;
-    padding: 0 18px;
-}
-
-.navbar a {
-    text-align: center;
-    text-decoration: none;
-    font-size: 20px;
-    color: $kodfont-third;
-    float: left;
-    display: block;
-}
-
-.navbar a:hover {
-    background-color: $kodfont-five;
-    color: $nav-background;
-}
-
-.side-nav h1 {
-    color: $kodfont-second;
-    font-family: $h1-font;
-    text-align: center;
-  }
-
-.side-nav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: $nav-background;
-    opacity: 0.9;
-    overflow-x: hidden;
-    padding-top: 60px;
-    transition: 0.5s;
-}
-
-.side-nav a {
-    padding: 10px 10px 10px 30px;
-    text-decoration: none;
-    font-size: 22px;
-    color: $kodfont-four;
-    display: block;
-    transition: 0.3s;
-}
-
-.side-nav a:hover {
-    color: $kodfont-second;
-    background-color: $kodfont-third;
-}
-
-.side-nav .btn-close {
-    position: absolute;
-    top: 0;
-    right: 22px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-
-.main {
-transition: margin-left 0.5s;
-padding: 20px;
-overflow: hidden;
-width: 100%;
-}
-
