--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,6 @@
 /* Colors */
 /* Font sizes */
 /* Fonts */
-@media (max-width: 668px) {
-  .navbar {
-    height: auto;
-  }
-  .navbar ul {
-    padding: 0;
-  }
-  .navbar ul li {
-    display: block;
-    text-align: center;
-    padding: 0;
-  }
-  .navbar a {
-    text-align: center;
-    text-decoration: none;
-    font-size: 25px;
-    color: #000;
-    float: none;
-    width: 100%;
-  }
-}
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -363,102 +341,102 @@ template {
 }
 
 .col-1 {
-  width: 8.33333;
+  width: 8.33333%;
 }
 
 .col-2 {
-  width: 16.66667;
+  width: 16.66667%;
 }
 
 .col-3 {
-  width: 25;
+  width: 25%;
 }
 
 .col-4 {
-  width: 33.33333;
+  width: 33.33333%;
 }
 
 .col-5 {
-  width: 41.66667;
+  width: 41.66667%;
 }
 
 .col-6 {
-  width: 50;
+  width: 50%;
 }
 
 .col-7 {
-  width: 58.33333;
+  width: 58.33333%;
 }
 
 .col-8 {
-  width: 66.66667;
+  width: 66.66667%;
 }
 
 .col-9 {
-  width: 75;
+  width: 75%;
 }
 
 .col-10 {
-  width: 83.33333;
+  width: 83.33333%;
 }
 
 .col-11 {
-  width: 91.66667;
+  width: 91.66667%;
 }
 
 .col-12 {
-  width: 100;
+  width: 100%;
 }
 
 .col-offset-0 {
-  width: 0;
+  margin-left: 0%;
 }
 
 .col-offset-1 {
-  width: 8.33333;
+  margin-left: 8.33333%;
 }
 
 .col-offset-2 {
-  width: 16.66667;
+  margin-left: 16.66667%;
 }
 
 .col-offset-3 {
-  width: 25;
+  margin-left: 25%;
 }
 
 .col-offset-4 {
-  width: 33.33333;
+  margin-left: 33.33333%;
 }
 
 .col-offset-5 {
-  width: 41.66667;
+  margin-left: 41.66667%;
 }
 
 .col-offset-6 {
-  width: 50;
+  margin-left: 50%;
 }
 
 .col-offset-7 {
-  width: 58.33333;
+  margin-left: 58.33333%;
 }
 
 .col-offset-8 {
-  width: 66.66667;
+  margin-left: 66.66667%;
 }
 
 .col-offset-9 {
-  width: 75;
+  margin-left: 75%;
 }
 
 .col-offset-10 {
-  width: 83.33333;
+  margin-left: 83.33333%;
 }
 
 .col-offset-11 {
-  width: 91.66667;
+  margin-left: 91.66667%;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 667px) {
   .col-s-1 {
     width: 8.33%;
   }
@@ -497,7 +475,7 @@ template {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 668px) {
   .col-m-1 {
     width: 8.33%;
   }
@@ -537,11 +515,207 @@ template {
 }
 
 /* Components */
-/* Sections */
-/*@import "section/registration_form";
+/*Calendar input style*/
+form {
+  display: flex;
+  justify-content: center;
+}
 
+input {
+  border: 0;
+}
+
+.input-calendar {
+  border: 1px solid #ccc;
+}
+
+.calendar {
+  text-align: center;
+}
+
+.date-calendar {
+  width: 150px;
+  border-left: 0.5px solid #ccc;
+  padding: 2px 5px;
+}
+
+/*Button's style*/
+[class*="btn-"] {
+  width: 80px;
+  height: 40px;
+  border-radius: 10%;
+  border: none;
+  background-color: #fc9105;
+  color: #fff;
+  cursor: pointer;
+  text-shadow: 0.7px 0.7px #6f7070;
+  padding: 10px;
+  margin-left: 10px;
+}
+
+.btn-lg {
+  width: 100px;
+  height: 50px;
+  font-size: 18px;
+}
+
+.btn-sm {
+  width: 70px;
+  height: 30px;
+  font-size: 12px;
+}
+
+.btn-gray {
+  background-color: #726e69;
+  text-shadow: 0.7px 0.7px #c4a57d;
+}
+
+[class*="undo-"] {
+  text-shadow: 0.7px 0.7px #c4a57d;
+  width: 50px;
+}
+
+.undo-1 {
+  width: 35px;
+}
+
+.undo-2 {
+  width: 45px;
+}
+
+/*Text and headers style*/
+h1, h2, h3, h4, h5, h6 {
+  padding: 0;
+  margin: 0;
+}
+
+h1 {
+  font-family: Lato, sans-serif;
+  color: #565550;
+}
+
+h2, h3 {
+  font-family: 'PT Serif', serif;
+  color: #757471;
+}
+
+h4 {
+  font-family: 'Open sans', sans-serif;
+  color: #9e975a;
+}
+
+h5, h6 {
+  font-family: 'Arial', sans-serif;
+}
+
+p {
+  font-family: 'Arial', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+  font-family: 'Arial', sans-serif;
+}
+
+/*Line with digit*/
+table {
+  font-family: 'Arial', sans-serif;
+  border-collapse: collapse;
+  border-bottom: 2px solid #878080;
+}
+
+.number {
+  text-align: right;
+}
+
+/*Table with links*/
+.table2 {
+  border-top: 2px solid #878080;
+  margin-left: 0;
+}
+
+tr {
+  border-bottom: 2px solid #878080;
+  text-align: justify;
+}
+
+table > tbody > tr > td {
+  padding: 1em;
+}
+
+/*list legend*/
+.legend {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.legend li {
+  display: inline-block;
+  padding: 0 25px;
+  font-size: 17px;
+  background-color: #ccc;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 7%;
+}
+
+[class*="sp-"] {
+  display: block;
+  height: 10px;
+  width: 10px;
+  background-color: #0442f9;
+  border-radius: 50%;
+  position: absolute;
+  top: 28%;
+  left: 22%;
+}
+
+.sp-orange {
+  left: 44%;
+  background-color: #fc9105;
+}
+
+.sp-green {
+  left: 61%;
+  background-color: #30ad14;
+}
+
+/*Unordered and ordered list*/
+ul, ol, li {
+  font-family: 'Arial', sans-serif;
+}
+
+.header5 {
+  padding: 15px;
+  margin: 15px;
+  margin-left: 20%;
+  text-align: left;
+}
+
+/*@import "sections/generalsection"*/
 /* Pages / Views */
 /*@import "pages/registration";*/
+/*Global styles*/
+.row:before,
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+[class*="col-"] {
+  padding: 12px;
+  float: left;
+}
+
+.row {
+  margin: 3% 0;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -552,10 +726,13 @@ body {
   font-family: "Lato", Arial;
 }
 
+/* Nav bar*/
 .navbar {
-  background-color: #fff;
   height: 55px;
   line-height: 55px;
+  position: fixed;
+  width: 100%;
+  background-color: #fff;
 }
 
 .navbar ul {
@@ -583,6 +760,7 @@ body {
   color: #313234;
 }
 
+/*Side bar*/
 .side-nav h1 {
   color: #fff;
   font-family: "Josefin Slab";
@@ -617,7 +795,7 @@ body {
   background-color: #000;
 }
 
-.side-nav .btn-close {
+.side-nav .b-close {
   position: absolute;
   top: 0;
   right: 22px;
@@ -625,11 +803,63 @@ body {
   margin-left: 50px;
 }
 
+/*Main content*/
 .main {
   transition: margin-left 0.5s;
   padding: 20px;
   overflow: hidden;
   width: 100%;
+}
+
+.container {
+  text-align: center;
+  padding: 10px;
+}
+
+.main-section {
+  width: 90%;
+  background-color: #fff;
+  margin: 0 5%;
+  box-shadow: 5px 8px rgba(135, 132, 128, 0.3);
+}
+
+.title {
+  text-transform: uppercase;
+  color: #6f7070;
+  border-bottom: 2px solid #ccc;
+  padding: 8px;
+}
+
+.border {
+  border-bottom: 2px solid #ccc;
+}
+
+.digit {
+  padding: 0;
+}
+
+/*Media query*/
+@media (max-width: 667px) {
+  .navbar {
+    height: auto;
+    position: static;
+  }
+  .navbar ul {
+    padding: 0;
+  }
+  .navbar ul li {
+    display: block;
+    text-align: center;
+    padding: 0;
+  }
+  .navbar a {
+    text-align: center;
+    text-decoration: none;
+    font-size: 25px;
+    color: #000;
+    float: none;
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
