--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -69,7 +69,7 @@ ul, ol, li {
 
 /*Line with digit*/
 table {
-font-family: arial, sans-serif;
+font-family: 'Arial', sans-serif;
 border-collapse: collapse;
 border-bottom: 2px solid #878080;
 margin-left: 5%;
