--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,17 +1,17 @@
-/* Colors */
+//Colors
 $paragraph-color: #000000;
 $brand-main-color: #181064;
 
-/* Font sizes */
+//Font sizes 
 $paragraph-font-size: 16px;
 
-/* Fonts */
+//Fonts
 $brand-font:'Open Sans', sans-serif;
 $paragraph-font: Arial;
 $h1-font: 'Damion', cursive;
 
-$nav-background: #313234;
-$kodfont-color: #00c7e8;
+$nav-background: #191919;
+$kodfont-color: #7296af;
 $kodfont-second: #fff;
 $kodfont-third: #000;
 $kodfont-four: #ccc;
@@ -19,11 +19,11 @@ $kodfont-five: #ddd;
 $kodfont-six:  #f76c35;
 $box-shadow: rgba(135, 132, 128, 0.3);
 $title-section: #6f7070;
-$span-blue :#0442f9;
 $span-orange: #fc9105;
 $span-green: #30ad14;
-$h1-color: #565550;
+$h1-color: #b6b6b6;
 $h2h3-color: #757471;
 $h4-color: #9e975a;
 $table-color: #878080;
-$shadow-color: #c4a57d
+$shadow-color: #c4a57d;
+$legend-color: #f3f3f1
