--- a/sass/components/_mainsection.scss
+++ b/sass/components/_mainsection.scss
@@ -20,7 +20,7 @@ box-shadow: 5px 8px $box-shadow;
   
 .title {
 text-transform: uppercase;
-color: $title-section;
+color: $h1-color;
 border-bottom: 2px solid $kodfont-four;
 padding: 8px;
 }
