--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,12 +3,16 @@
 @import "normalize";
 @import "layout";
 /* Components */
-@import "components/component1";
-@import "components/component2";
-@import "components/component3";
-@import "components/component4";
+@import "components/globalstyles";
+@import "components/navbars";
+@import "components/mainsection";
+@import "components/input";
+@import "components/buttons";
+@import "components/paragraphtab";
+@import "components/listlegend";
+@import "mediaquery"
 
-/*@import "sections/generalsection"*/;
+//@import "sections/generalsection"//
 
-/* Pages / Views */
-/*@import "pages/registration";*/
+// Pages / Views //
+//@import "pages/registration";//
