--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-/* Colors */
-/* Font sizes */
-/* Fonts */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -515,191 +512,6 @@ template {
 }
 
 /* Components */
-/*Calendar input style*/
-form {
-  display: flex;
-  justify-content: center;
-}
-
-input {
-  border: 0;
-}
-
-.input-calendar {
-  border: 1px solid #ccc;
-}
-
-.calendar {
-  text-align: center;
-}
-
-.date-calendar {
-  width: 150px;
-  border-left: 0.5px solid #ccc;
-  padding: 2px 5px;
-}
-
-/*Button's style*/
-[class*="btn-"] {
-  width: 80px;
-  height: 40px;
-  border-radius: 10%;
-  border: none;
-  background-color: #fc9105;
-  color: #fff;
-  cursor: pointer;
-  text-shadow: 0.7px 0.7px #6f7070;
-  padding: 10px;
-  margin-left: 10px;
-}
-
-.btn-lg {
-  width: 100px;
-  height: 50px;
-  font-size: 18px;
-}
-
-.btn-sm {
-  width: 70px;
-  height: 30px;
-  font-size: 12px;
-}
-
-.btn-gray {
-  background-color: #726e69;
-  text-shadow: 0.7px 0.7px #c4a57d;
-}
-
-[class*="undo-"] {
-  text-shadow: 0.7px 0.7px #c4a57d;
-  width: 50px;
-}
-
-.undo-1 {
-  width: 35px;
-}
-
-.undo-2 {
-  width: 45px;
-}
-
-/*Text and headers style*/
-h1, h2, h3, h4, h5, h6 {
-  padding: 0;
-  margin: 0;
-}
-
-h1 {
-  font-family: Lato, sans-serif;
-  color: #565550;
-}
-
-h2, h3 {
-  font-family: 'PT Serif', serif;
-  color: #757471;
-}
-
-h4 {
-  font-family: 'Open sans', sans-serif;
-  color: #9e975a;
-}
-
-h5, h6 {
-  font-family: 'Arial', sans-serif;
-}
-
-p {
-  font-family: 'Arial', sans-serif;
-}
-
-a {
-  text-decoration: none;
-  color: #000;
-  font-family: 'Arial', sans-serif;
-}
-
-/*Line with digit*/
-table {
-  font-family: 'Arial', sans-serif;
-  border-collapse: collapse;
-  border-bottom: 2px solid #878080;
-}
-
-.number {
-  text-align: right;
-}
-
-/*Table with links*/
-.table2 {
-  border-top: 2px solid #878080;
-  margin-left: 0;
-}
-
-tr {
-  border-bottom: 2px solid #878080;
-  text-align: justify;
-}
-
-table > tbody > tr > td {
-  padding: 1em;
-}
-
-/*list legend*/
-.legend {
-  position: relative;
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-}
-
-.legend li {
-  display: inline-block;
-  padding: 0 25px;
-  font-size: 17px;
-  background-color: #ccc;
-  height: 30px;
-  line-height: 30px;
-  text-align: center;
-  border-radius: 7%;
-}
-
-[class*="sp-"] {
-  display: block;
-  height: 10px;
-  width: 10px;
-  background-color: #0442f9;
-  border-radius: 50%;
-  position: absolute;
-  top: 28%;
-  left: 22%;
-}
-
-.sp-orange {
-  left: 44%;
-  background-color: #fc9105;
-}
-
-.sp-green {
-  left: 61%;
-  background-color: #30ad14;
-}
-
-/*Unordered and ordered list*/
-ul, ol, li {
-  font-family: 'Arial', sans-serif;
-}
-
-.header5 {
-  padding: 15px;
-  margin: 15px;
-  margin-left: 20%;
-  text-align: left;
-}
-
-/*@import "sections/generalsection"*/
-/* Pages / Views */
-/*@import "pages/registration";*/
-/*Global styles*/
 .row:before,
 .row:after {
   content: "";
@@ -723,7 +535,7 @@ ul, ol, li {
 body {
   margin: 0 auto;
   background-color: #ccc;
-  font-family: "Lato", Arial;
+  font-family: Arial;
 }
 
 /* Nav bar*/
@@ -743,28 +555,36 @@ body {
 
 .navbar li {
   display: inline-block;
-  padding: 0 18px;
 }
 
 .navbar a {
   text-align: center;
   text-decoration: none;
   font-size: 20px;
-  color: #000;
+  color: #b6b6b6;
   float: left;
   display: block;
+  border-left: 0.9px solid #b6b6b6;
+  padding: 2px 12px 0 12px;
+}
+
+.navbar i {
+  font-size: 16px;
+  padding: 6px;
+}
+
+.wallet {
+  color: #191919;
+}
+
+.span-name {
+  color: #7296af;
+  font-size: 15px;
 }
 
 .navbar a:hover {
   background-color: #ddd;
-  color: #313234;
-}
-
-/*Side bar*/
-.side-nav h1 {
-  color: #fff;
-  font-family: "Josefin Slab";
-  text-align: center;
+  color: #191919;
 }
 
 .side-nav {
@@ -774,25 +594,37 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #313234;
+  background-color: #000;
   opacity: 0.9;
   overflow-x: hidden;
-  padding-top: 60px;
+  padding-top: 20px;
   transition: 0.5s;
 }
 
+.side-nav h1 {
+  color: #fff;
+  font-family: "Damion", cursive;
+  text-align: left;
+  font-size: 42px;
+  padding-bottom: 10px;
+}
+
 .side-nav a {
-  padding: 10px 10px 10px 30px;
+  padding: 20px 20px 20px 2px;
   text-decoration: none;
-  font-size: 22px;
+  font-size: 18px;
   color: #ccc;
   display: block;
   transition: 0.3s;
 }
 
+.side-nav i {
+  padding-right: 6px;
+}
+
 .side-nav a:hover {
   color: #fff;
-  background-color: #000;
+  background-color: #191919;
 }
 
 .side-nav .b-close {
@@ -803,7 +635,6 @@ body {
   margin-left: 50px;
 }
 
-/*Main content*/
 .main {
   transition: margin-left 0.5s;
   padding: 20px;
@@ -825,7 +656,7 @@ body {
 
 .title {
   text-transform: uppercase;
-  color: #6f7070;
+  color: #b6b6b6;
   border-bottom: 2px solid #ccc;
   padding: 8px;
 }
@@ -836,6 +667,248 @@ body {
 
 .digit {
   padding: 0;
+}
+
+/*Calendar input style*/
+/*input:required {
+    border-color: rgba(255, 99 ,71, 0.6);
+    outline-color: rgb(63, 122, 51);     
+   }*/
+form {
+  display: flex;
+  justify-content: center;
+}
+
+input {
+  border: 0;
+}
+
+.input-calendar {
+  border: 1px solid #ccc;
+}
+
+.calendar {
+  text-align: center;
+}
+
+.date-calendar {
+  width: 150px;
+  padding: 2px 5px;
+}
+
+.cal-right {
+  border-left: 0.5px solid #ccc;
+}
+
+i.icon-calendar {
+  margin-right: 10px;
+}
+
+/*Button's style*/
+[class*="btn-"] {
+  width: 80px;
+  height: 40px;
+  -webkit-border-radius: 10%;
+  -moz-border-radius: 10%;
+  -ms-border-radius: 10%;
+  border-radius: 10%;
+  border: none;
+  background-color: #fc9105;
+  color: #fff;
+  cursor: pointer;
+  text-shadow: 0.7px 0.7px #6f7070;
+  padding: 10px;
+  margin-left: 10px;
+}
+
+.btn-lg {
+  width: 120px;
+  height: 38px;
+  font-size: 16px;
+}
+
+.btn-sm {
+  width: 70px;
+  height: 30px;
+  font-size: 12px;
+}
+
+.btn-gray {
+  background-color: #6f7070;
+  text-shadow: 0.7px 0.7px #c4a57d;
+}
+
+[class*="undo-"] {
+  text-shadow: 0.7px 0.7px #c4a57d;
+  width: 50px;
+}
+
+.undo-1 {
+  width: 35px;
+}
+
+.undo-2 {
+  width: 45px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  padding: 0;
+  margin: 0;
+}
+
+h1 {
+  font-family: "Damion", cursive;
+  color: #b6b6b6;
+}
+
+h2, h3 {
+  font-family: "Open Sans", sans-serif;
+  color: #757471;
+}
+
+h4 {
+  font-family: "Open Sans", sans-serif;
+  color: #9e975a;
+}
+
+h5, h6 {
+  font-family: Arial;
+}
+
+p {
+  font-family: Arial;
+}
+
+a {
+  text-decoration: none;
+  color: #000000;
+  font-family: Arial;
+}
+
+.digit {
+  display: flex;
+  justify-content: space-between;
+}
+
+.line {
+  border-bottom: 0.5px solid #b6b6b6;
+  width: 250px;
+  display: flex;
+  justify-content: space-between;
+  font-family: "Open Sans", sans-serif;
+  color: #757471;
+  padding: 5px 0;
+}
+
+span.linesp {
+  color: #000;
+}
+
+.line_dig {
+  margin: 1% 0 0 0;
+}
+
+.link_div {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 0.5px solid #b6b6b6;
+  align-items: center;
+  font-family: "Open Sans", sans-serif;
+  color: #757471;
+  padding: 20px 0;
+}
+
+.link_div:hover {
+  background-color: #f3f3f1;
+}
+
+.content_link {
+  justify-content: space-between;
+  width: 120px;
+}
+
+.content_link a {
+  color: #7296af;
+  font-family: "Open Sans", sans-serif;
+}
+
+.content_link i {
+  font-size: 14px;
+  padding-right: 15px;
+}
+
+.content_link i.icon-links {
+  color: #fc9105;
+}
+
+.name-one {
+  text-align: left;
+}
+
+.top-border {
+  border-top: 0.5px solid #b6b6b6;
+}
+
+.button {
+  padding-bottom: 20px;
+}
+
+.button-second {
+  padding-top: 40px;
+}
+
+/*list legend*/
+.legend {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.legend li {
+  display: inline-block;
+  padding: 0 25px;
+  margin: 0 5px;
+  font-size: 15px;
+  background-color: #f3f3f1;
+  height: 35px;
+  line-height: 35px;
+  text-align: center;
+  color: #6f7070;
+  -webkit-border-radius: 7%;
+  -moz-border-radius: 7%;
+  -ms-border-radius: 7%;
+  border-radius: 7%;
+}
+
+.legend li.firstch i {
+  font-size: 14px;
+  padding-right: 3px;
+  color: #7296af;
+}
+
+.legend li.midch i {
+  font-size: 14px;
+  padding-right: 3px;
+  color: #fc9105;
+}
+
+.legend li.lastch {
+  background-color: #fff;
+  color: #7296af;
+}
+
+.legend li.lastch i {
+  font-size: 14px;
+  padding-right: 3px;
+  color: #30ad14;
+}
+
+.header5 {
+  padding: 15px 0;
+  margin: 15px 0;
+  text-align: left;
+  color: #6f7070;
+  font-family: "Open Sans", sans-serif;
 }
 
 /*Media query*/
