--- a/sass/components/_navbars.scss
+++ b/sass/components/_navbars.scss
@@ -33,6 +33,11 @@
     color: $nav-background;  
 }
 
+i.icon-arrow-down {
+    margin-left: 9px;
+    font-size: 14px;
+}
+
 .span-name {
     color: $kodfont-color;
     font-size: 15px;
