--- a/sass/components/_navbars.scss
+++ b/sass/components/_navbars.scss
@@ -65,7 +65,7 @@ i.icon-arrow-down {
             color: $kodfont-second;
             font-family: $h1-font;
             text-align: left;
-            font-size: 42px;
+            font-size: 38px;
             padding-bottom: 10px;
         }
         a {
@@ -84,12 +84,13 @@ i.icon-arrow-down {
 .side-nav a:hover {
     color: $kodfont-second;
     background-color: $nav-background;
+    border-left: 3px solid $kodfont-six;
 }
 
 .side-nav .b-close {
     position: absolute;
     top: 0;
-    right: 22px;
-    font-size: 36px;
-    margin-left: 50px;
+    right: 18px;
+    font-size: 34px;
+    margin-left: 90px;
 }
