--- a/sass/components/_paragraphtab.scss
+++ b/sass/components/_paragraphtab.scss
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
     
 .line {
     border-bottom: 0.5px solid $h1-color;
-    width: 250px;
+    width: 45%;
     display: flex;
     justify-content: space-between;
     font-family: $brand-font;
