--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -12,4 +12,13 @@
     column-count: $count;
   }
 
+  @mixin grid($prefix) {
+    @for $i from 1 through 12 {
+      .col-#{$prefix}-#{$i} {
+        $width: 100% / 12 * $i;
+        flex: 0 0 $width;
+        max-width: $width;
+      }
+    }
+  }
   
