--- a/sass/components/_globalstyles.scss
+++ b/sass/components/_globalstyles.scss
@@ -25,3 +25,14 @@ body {
     background-color: $kodfont-four;
     font-family: $paragraph-font;
 }
+
+.container-fluid {
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
