--- a/form/style.css
+++ b/form/style.css
@@ -43,13 +43,13 @@ box-shadow: 5px 8px rgba(135, 132, 128, 0.3);
   
 .title {
 text-transform: uppercase;
-border-bottom: 2px solid #ccc;
+border-bottom: 0.5px solid #ccc;
 padding: 8px;
 color: #b6b6b6;
 }
 
 .divide {
-    border: 0.5px solid #ccc;
+    border: 0.3px solid #ccc;
  }
 
  form {
@@ -65,12 +65,42 @@ color: #b6b6b6;
 input {
     height: 30px;
     width: 70%;
+    border-radius:3%;
+    border: 0.5px solid #ccc;
+    color: #ccc;
+    font-size: 13px;
 }
 
 label {
     height: 30px;
     line-height:30px;
 }
+
+.submit {
+  border-top: 0.5px solid #ccc;
+  padding: 25px 0;
+}
+
+/*Button's style*/
+[class*="btn-"]{
+  width: 50px;
+  height: 40px;
+  border-radius:5%;
+  border: none;
+  background-color: #f58220;
+  color: #f7ddc8;
+  cursor: pointer;
+  text-shadow: 0.7px 0.7px #6f7070;
+  padding: 10px;
+  margin-left: 10px;
+  }
+  
+  .btn-lg {
+  width: 90px;
+  height: 38px;
+  font-size: 16px;
+  }
+
 @media (min-width: 769px){
 /*Grid*/
   .col-1 {
