Amend form.html and style

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,9 +10,10 @@
 @import "components/buttons";
 @import "components/paragraphtab";
 @import "components/listlegend";
-@import "mediaquery"
+@import "mediaquery";
 
 //@import "sections/generalsection"//
 
-// Pages / Views //
+@import "pages/form-page";
+
 //@import "pages/registration";//
