--- a/css/style.css
+++ b/css/style.css
@@ -516,6 +516,17 @@ body {
   font-family: Arial;
 }
 
+.container-fluid {
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 /* Nav bar*/
 .navbar {
   height: 55px;
@@ -529,10 +540,12 @@ body {
   margin: 0;
   list-style-type: none;
   text-align: right;
+  float: right;
 }
 
 .navbar li {
-  display: inline-block;
+  display: block;
+  float: left;
 }
 
 .navbar a {
@@ -627,12 +640,6 @@ i.icon-arrow-down {
   margin-left: 250px;
 }
 
-.container-fluid {
-  text-align: center;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
 .main-section {
   width: 90%;
   background-color: #fff;
@@ -647,17 +654,8 @@ i.icon-arrow-down {
   padding: 8px;
 }
 
-.border {
-  border-bottom: 2px solid #ccc;
-}
-
 .digit {
   padding: 0;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
 }
 
 /*Calendar input style*/
