--- a/sass/components/_navbars.scss
+++ b/sass/components/_navbars.scss
@@ -1,7 +1,6 @@
 /* Nav bar*/
 .navbar {
-    height: 55px;
-    line-height: 55px;
+    line-height: 58px;
     position: fixed;
     width: 100%;
     background-color: $kodfont-second;
@@ -9,9 +8,11 @@
             margin: 0;
             list-style-type: none;
             text-align: right;
+            float: right;
         }
         li {
-            display: inline-block;
+            display: block;
+            float: left;
         }
         a {
             text-align: center;
